--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -1,4 +1,5 @@
-[pytest]
-markers =
-sanity
-regression
+[commonInfo]
+baseURL= https://www.saucedemo.com/
+username=standard_user
+password=secret_sauce
+
